@@ -105,6 +105,7 @@ TGo4ViewPanel::TGo4ViewPanel(QWidget *parent, const char* name)
    fxRepaintTimerPad = 0;
    fxDoubleClickTimerPad = 0;
    fbFreezeTitle = false;
+   fFreezedTitle = "";
    fbApplyToAllFlag = false;
    fbCanvasCrosshair = false;
    fbCanvasEventstatus = false;
@@ -1607,6 +1608,9 @@ void TGo4ViewPanel::MakePictureForPad(TGo4Picture* pic, TPad* pad, bool useitemn
 
    pic->CopyOptionsFrom(padopt);
 
+   if (pad==GetCanvas() && fbFreezeTitle)
+      pic->SetTitle(fFreezedTitle.toAscii());
+
    int objnamenum = 0;
 
    for(int n=0;n<slot->NumChilds();n++) {
@@ -2923,6 +2927,16 @@ void TGo4ViewPanel::CheckObjectsAssigments( TPad * pad, TGo4Slot * padslot )
    }
 }
 
+void TGo4ViewPanel::SetFreezedTitle(const QString& title)
+{
+   QString mycaption = GetPanelName();
+   mycaption += ": ";
+   mycaption += title;
+   setWindowTitle(mycaption);
+   fbFreezeTitle = true;
+   fFreezedTitle = title;
+}
+
 void TGo4ViewPanel::CheckForSpecialObjects(TPad *pad, TGo4Slot* padslot)
 {
    if ((pad==0) || (padslot==0)) return;
@@ -2975,13 +2989,7 @@ void TGo4ViewPanel::CheckForSpecialObjects(TPad *pad, TGo4Slot* padslot)
 
       ProcessPictureRedraw(GetLinkedName(picslot), pad, pic);
 
-      if (pad==GetCanvas()) {
-         QString mycaption = GetPanelName();
-         mycaption += ": ";
-         mycaption += pic->GetTitle();
-         setWindowTitle(mycaption);
-         fbFreezeTitle = true;
-      }
+      if (pad==GetCanvas()) SetFreezedTitle(pic->GetTitle());
 
       // remove picture from the pad
       delete picslot;
@@ -4781,13 +4789,7 @@ void TGo4ViewPanel::OptionsMenuItemActivated(int id)
          QString text = QInputDialog::getText(this,
                           GetPanelName(), "Enter Viewpanel Title:", QLineEdit::Normal,
                          oldtitle, &ok);
-         if ( ok && !text.isEmpty() ) {
-            QString mycaption = GetPanelName();
-            mycaption += ": ";
-            mycaption += text;
-            setWindowTitle(mycaption);
-            fbFreezeTitle = true;
-         }
+         if ( ok && !text.isEmpty() ) SetFreezedTitle(text);
          break;
       }
 
